tests/type_errors/faulty_function_calls.sy
mod A

type V = { x: Real }

def compose : (a -> b) -> (b -> c) -> a -> c : f g a = g (f a)

def l : V -> V -> Real : { x } =  x
def h : Real -> Real : x = x + 0.5

def main ::= (compose l h) { x: 1.0 }

--+ expected exit status: 7
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ _ 
--+ ----
--+ {  x: _   } -> '@ Real' 
--+ 
--+ tests/type_errors/faulty_function_calls.sy
--+   7| def l : V -> V -> Real : { x } =  x
--+   8| def h : Real -> Real : x = x + 0.5

